# ai-powered-vehicle-damage-assessment-pipeline

./: .gitignore  README.md  README.zh-CN.md  pyproject.toml  requirements-colab.txt
configs/: cardd_yolo.yaml
docs/: api_usage.md  cardd_resume_interview_report_zh.md  colab_operation_guide.md  data_card.md  drive_layout.md  experiment_card.md  llm_eval_report.md  llm_report_module_plan.md  model_card.md  portfolio_pitch_zh.md  privacy_checklist.md  project_handoff_2026-07-08.md  reproduction_plan.md  results_summary.md
docs/superpowers/plans/: 2026-07-07-cardd-resume-interview-next-stage.md  2026-07-08-qwen-report-eval-demo-polish.md
notebooks/: 00_colab_ai_powered_vehicle_damage_pipeline_runbook.ipynb  01_train_cardd_yolo11_seg.ipynb  02_demo_cardd_yolo11_seg.ipynb  03_finetune_qwen7b_report_lora.ipynb  03_generate_llm_report_qwen7b.ipynb  04_generate_llm_report_qwen7b.ipynb  05_colab_qwen_report_adapter_workflow.ipynb  06_colab_qwen_report_eval_full_workflow.ipynb  07_colab_final_portfolio_validation.ipynb  08_colab_public_url_demo_test.ipynb
scripts/: colab_gradio_public_demo.py
src/vehicle_damage_pipeline/: __init__.py  paths.py
src/vehicle_damage_pipeline/backup/: __init__.py  backup_lightweight.py  manifest.py
src/vehicle_damage_pipeline/data/: __init__.py  prepare_cardd.py
tests/: test_assessment_report.py  test_backup_manifest.py  test_colab_public_demo.py  test_colab_runbooks.py  test_demo_display.py  test_llm_eval.py  test_prediction_format.py  test_pyproject_dependencies.py  test_qwen_report_workflow.py  test_rag_eval.py
(+21 files in other folders)
