[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "vehicle-damage-pipeline"
version = "0.1.0"
description = "AI-powered vehicle damage detection, segmentation, report generation, and evaluation pipeline."
requires-python = ">=3.10"
dependencies = [
  "pandas",
  "pyyaml",
  "tqdm",
]

[project.optional-dependencies]
vision = [
  "ultralytics>=8.3.0",
  "opencv-python",
  "matplotlib",
]
llm = [
  "transformers>=4.51.0",
  "datasets",
  "accelerate",
  "bitsandbytes",
  "peft",
  "trl",
]
service = [
  "fastapi",
  "uvicorn",
  "gradio",
  "python-multipart",
]
dev = [
  "pytest",
]

[tool.setuptools.packages.find]
where = ["src"]
